--- a/www/css/base.css
+++ b/www/css/base.css
@@ -83,6 +83,9 @@ body > div.footer {
   display: flex;
   flex-direction: column;
 }
+body > .location {
+  max-width: 50%;
+}
 
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: 4px;
@@ -321,10 +324,10 @@ hr {
 
 table {
   display: block;
-  width: max-content;
-
-  overflow: hidden;
+  max-width: max-content;
+  overflow: auto;
   word-break: keep-all;
+
   color: var(--color-0-fg);
 
   border-radius: 3px;
